--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ body, html {
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
     <span class="w3-tag">Open from 6am to 5pm</span>
   </div>
-  <div class="w3-display-middle w3-center">
-    <span class="w3-text-black" style="font-size:60px">Joshua V. Shields</span>
+  <div class="w3-display-right w3-center">
+    <span class="w3-text-white" style="font-size:90px">Joshua V. <br>Shields</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
     <span class="w3-text-white">15 Adr street, 5015</span>
@@ -62,7 +62,7 @@ body, html {
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT THE CAFE</span></h5>
-    <p>I am currently a second year graduate student at <a href="msu.edu">Michigan State University</a> in the department of <a href="pa.msu.edu">Physics and Astronomy.</a> </p>
+    <p>I am currently a second year graduate student at <a href="https://www.msu.edu">Michigan State University</a> in the department of <a href="https://www.pa.msu.edu">Physics and Astronomy.</a> </p>
     <p>In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
