--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ body, html {
       <a href="#about" class="w3-button w3-block w3-black">ABOUT ME</a>
     </div>
     <div class="w3-col s3">
-      <a href="#menu" class="w3-button w3-block w3-black">RESEARCH</a>
+      <a href="#research" class="w3-button w3-block w3-black">RESEARCH</a>
     </div>
     <div class="w3-col s3">
-      <a href="#where" class="w3-button w3-block w3-black">CV AND PUBLICATIONS</a>
+      <a href="#publications" class="w3-button w3-block w3-black">CV AND PUBLICATIONS</a>
     </div>
   </div>
 </div>
@@ -45,13 +45,13 @@ body, html {
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-    <span class="w3-tag">Open from 6am to 5pm</span>
+    <span class="w3-tag">Biomedical and Physical Sciences <br> 567 Wilson Rd., Room 3265 <br> East Lansing, 48823 MI</span>
   </div>
   <div class="w3-display-right w3-center">
     <span class="w3-text-white" style="font-size:90px">Joshua V. <br>Shields</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">15 Adr street, 5015</span>
+    <span class="w3-text-black">shield90 [at] msu [dot] edu</span>
   </div>
 </header>
 
