--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body, html {
     <span class="w3-text-white" style="font-size:90px">Joshua V. <br>Shields</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-black">shield90 [at] msu [dot] edu</span>
+    <span class="w3-tag">shield90 [at] msu [dot] edu</span>
   </div>
 </header>
 
