--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body, html {
     <span class="w3-text-white" style="font-size:90px">Joshua V. <br>Shields</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-tag">shield90 [at] msu [dot] edu</span>
+    <span class="w3-tag">Astrophysics Graduate Student<br>shield90 [at] msu [dot] edu</span>
   </div>
 </header>
 
@@ -63,7 +63,9 @@ body, html {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
     <p>I am currently a second year graduate student at <a href="https://www.msu.edu">Michigan State University</a> in the department of <a href="https://www.pa.msu.edu">Physics and Astronomy.</a> </p>
-    <p>In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
+
+      <p>I work with <a href="htt[s://www.wkzerzendorf.github.io">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to try to uncover their explosion mechanisms. To do this I use statistical methods to analyze large datasets of stars in supernova remnants.</p>
+    
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
       <p>Chef, Coffeeist and Owner: Liam Brown</p>
