--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@ body, html {
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
     <p>I am currently a second year graduate student at <a href="https://www.msu.edu">Michigan State University</a> in the department of <a href="https://www.pa.msu.edu">Physics and Astronomy.</a> </p>
 
-      <p>I work with <a href="htt[s://www.wkzerzendorf.github.io">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to try to uncover their explosion mechanisms. To do this I use statistical methods to analyze large datasets of stars in supernova remnants.</p>
+      <p>I work with <a href="https://www.wkzerzendorf.github.io">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to try to uncover their explosion mechanisms. To do this I use statistical methods to analyze large datasets of stars in supernova remnants.</p>
     
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
       <p>Chef, Coffeeist and Owner: Liam Brown</p>
     </div>
-    <img src="/w3images/coffeeshop.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="sn1006c.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
     <p><strong>Address:</strong> 15 Adr street, 5015, NY</p>
   </div>
