--- a/index.html
+++ b/index.html
@@ -66,13 +66,9 @@ body, html {
 
       <p>I work with <a href="https://www.wkzerzendorf.github.io">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to try to uncover their explosion mechanisms. To do this I use statistical methods to analyze large datasets of stars in supernova remnants.</p>
     
-    <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
-      <p>Chef, Coffeeist and Owner: Liam Brown</p>
     </div>
     <img src="sn1006c.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
-    <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
-    <p><strong>Address:</strong> 15 Adr street, 5015, NY</p>
+
   </div>
 </div>
 
@@ -80,7 +76,7 @@ body, html {
 <div class="w3-container" id="CV and Publications">
   <div class="w3-content" style="max-width:700px">
  
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">THE MENU</span></h5>
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h5>
   
     <div class="w3-row w3-center w3-card w3-padding">
       <a href="javascript:void(0)" onclick="openMenu(event, 'Eat');" id="myLink">
@@ -124,7 +120,7 @@ body, html {
       <h5>Soda</h5>
       <p class="w3-text-grey">Coke, Sprite, Fanta, etc. 2.50</p>
     </div>  
-    <img src="/w3images/coffeehouse2.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
+    <img src="kepler.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
   </div>
 </div>
 
