--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body, html {
       <p>I work with <a href="https://www.wkzerzendorf.github.io">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to try to uncover their explosion mechanisms. To do this I use statistical methods to analyze large datasets of stars in supernova remnants.</p>
     
     </div>
-    <img src="sn1006c.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="sn1006c.jpg" style="width:100%;max-width:1000px;margin-top:32px;" class="w3-margin-top">
 
   </div>
 </div>
