--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body, html {
       <p>I work with <a href="https://www.wkzerzendorf.github.io">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to try to uncover their explosion mechanisms. To do this I use statistical methods to analyze large datasets of stars in supernova remnants.</p>
     
     </div>
-    <img src="sn1006c.jpg" style="width:100%;max-width:1000px;margin-top:32px;" class="w3-margin-top">
+    <img src="sn1006c.jpg" style="width:100%;max-width:1000px;margin-top:32px;" class="center">
 
   </div>
 </div>
@@ -80,8 +80,8 @@ body, html {
   
     <div class="w3-row w3-center w3-card w3-padding">
 
-      <p>HELP
-	</p>
+      <p><a href="CV.pdf">My CV></a> <br> <a href="https://www.http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Shields,+J.+V.&libid=5c019ae301">Click here for a link to my ADS papers</a></p>
+      
     <img src="kepler.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
   </div>
 </div>
