--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body, html {
   
     <div class="w3-row w3-center w3-card w3-padding">
 
-      <p><a href="CV.pdf">My CV></a> <br> <a href="https://www.http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Shields,+J.+V.&libid=5c019ae301">Click here for a link to my ADS papers</a></p>
+      <p><a href="CV.pdf">My CV</a> <br> <a href="https://www.adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Shields,+J.+V.&libid=5c019ae301">Click here for a link to my ADS papers</a> <br> <a href="https://academic.oup.com/mnras/article/483/4/4470/5253610?guestAccessKey=6f41b2bc-242d-4692-b714-7b36a54e2f46">Click here to read my paper discoverying new R Coronae Borealis variable stars in ASAS-SN</a></p>
       
     <img src="kepler.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
   </div>
