--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ body, html {
       <a href="#about" class="w3-button w3-block w3-black">ABOUT ME</a>
     </div>
     <div class="w3-col s3">
-      <a href="#research" class="w3-button w3-block w3-black">RESEARCH</a>
+      <a href="#publications" class="w3-button w3-block w3-black">CV AND PUBLICATIONS</a>
     </div>
     <div class="w3-col s3">
-      <a href="#publications" class="w3-button w3-block w3-black">CV AND PUBLICATIONS</a>
+      <a href="#research" class="w3-button w3-block w3-black">RESEARCH</a>
     </div>
   </div>
 </div>
@@ -67,16 +67,16 @@ body, html {
       <p>I work with <a href="https://www.wkzerzendorf.github.io">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to try to uncover their explosion mechanisms. To do this I use statistical methods to analyze large datasets of stars in supernova remnants.</p>
     
     </div>
-    <img src="sn1006c.jpg" style="width:100%;max-width:1000px;margin-top:32px;" class="center">
+    <img src="sn1006c.jpg" style="width:100%;max-width:1000px;margin-top:32px;" class="w3-center">
 
   </div>
 </div>
 
 <!-- Menu Container -->
-<div class="w3-container" id="CV and Publications">
+<div class="w3-container" id="publications">
   <div class="w3-content" style="max-width:700px">
  
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h5>
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">CV AND PUBLICATIONS</span></h5>
   
     <div class="w3-row w3-center w3-card w3-padding">
 
@@ -87,9 +87,9 @@ body, html {
 </div>
 
 <!-- Contact/Area Container -->
-<div class="w3-container" id="where" style="padding-bottom:32px;">
+<div class="w3-container" id="research" style="padding-bottom:32px;">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h5>
     <p>Find us at some address at some place.</p>
     <img src="/w3images/map.jpg" class="w3-image" style="width:100%">
     <p><span class="w3-tag">FYI!</span> We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
