--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ body, html {
 .menu {
   display: none;
 }
+
+.aligncenter{
+    text-align: center;
+}
 </style>
 <body>
 
@@ -66,9 +70,10 @@ body, html {
 
       <p>I work with <a href="https://www.wkzerzendorf.github.io">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to try to uncover their explosion mechanisms. To do this I use statistical methods to analyze large datasets of stars in supernova remnants.</p>
     
-    </div>
-    <img src="sn1006c.jpg" style="width:90%;max-width:1000px;margin-top:32px;" class="w3-center">
-
+  </div>
+  <p class="aligncenter">
+    <img src="sn1006c.jpg" style="width:90%;max-width:1000px;margin-top:32px;" class="center">
+  </p>
   </div>
 </div>
 
@@ -92,8 +97,6 @@ body, html {
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h5>
     <p>I'm lookin at some remnants for some stars. Will fill out more later</p>
     <img src="/w3images/map.jpg" class="w3-image" style="width:100%">
-    <p><span class="w3-tag">FYI!</span> We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
-    <p><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
     
   </div>
 </div>
