--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body, html {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h5>
     <p>I'm lookin at some remnants for some stars. Will fill out more later</p>
-    <img src="/w3images/map.jpg" class="w3-image" style="width:100%">
+<!--    <img src="/w3images/map.jpg" class="w3-image" style="width:100%"> -->
     
   </div>
 </div>
