--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body, html {
   
     <div class="w3-row w3-center w3-card w3-padding">
 
-      <p><a href="CV.pdf">My CV</a> <br> <a href="https://www.adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Shields,+J.+V.&libid=5c019ae301">Click here for a link to my ADS papers</a> <br> <a href="https://academic.oup.com/mnras/article/483/4/4470/5253610?guestAccessKey=6f41b2bc-242d-4692-b714-7b36a54e2f46">Click here to read my paper discoverying new R Coronae Borealis variable stars in ASAS-SN</a></p>
+      <p><a href="CV.pdf">My CV</a> <br> <a href="https://www.adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Shields,+J.+V.&libid=5c019ae301">Click here for a link to my ADS papers</a> <br> <a href="https://academic.oup.com/mnras/article/483/4/4470/5253610?guestAccessKey=6f41b2bc-242d-4692-b714-7b36a54e2f46">Click here to read my paper discovering new R Coronae Borealis variable stars in ASAS-SN</a></p>
       
     <img src="kepler.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
   </div>
@@ -95,7 +95,7 @@ body, html {
 <div class="w3-container" id="research" style="padding-bottom:32px;">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h5>
-    <p>I'm lookin at some remnants for some stars. Will fill out more later</p>
+    <p>I'm lookin at some remnants for some stars. Will fill out more later. <br> Did some work with ASAS-SN in the past.</p>
 <!--    <img src="/w3images/map.jpg" class="w3-image" style="width:100%"> -->
     
   </div>
