--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body, html {
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
     <p>I am currently a second year graduate student at <a href="https://www.msu.edu">Michigan State University</a> in the department of <a href="https://www.pa.msu.edu">Physics and Astronomy.</a> </p>
 
-      <p>I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to try to uncover their explosion mechanisms. To do this I use statistical methods to analyze large datasets of stars in supernova remnants.</p>
+      <p>I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to learn about their progenitor systems and test different progenitor theories. I do so using statistical methods capitalizing on the revolutionary new GAIA mission to investigate the stellar populations in supernova remnants.</p>
     
   </div>
   <p class="aligncenter">
@@ -95,7 +95,7 @@ body, html {
 <div class="w3-container" id="research" style="padding-bottom:32px;">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h5>
-    <p>I'm lookin at some remnants for some stars. Will fill out more later. <br> Did some work with ASAS-SN in the past.</p>
+    <p>I'm currently investigating the stellar population in the SN1006 remnant, using multi-year baseline astrometry to recover the proper motions of faint stars. <br> In the past I have worked on the ASAS-SN team to discover new supernovae in low redshift galaxies.</p>
 <!--    <img src="/w3images/map.jpg" class="w3-image" style="width:100%"> -->
     
   </div>
