pretty sure it was something important

--- a/index.html
+++ b/index.html
@@ -71,14 +71,13 @@ body, html {
     <p>I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to learn about their progenitor systems and test different progenitor theories. I do so using statistical methods capitalizing on the revolutionary new GAIA mission to investigate the stellar populations in supernova remnants.<br>
 
       I also help run Michigan State's astrophysics journal club, <a href="https://jvshields.github.io/coffeepapers/">Astro Coffee!</a> We meet twice a week to discuss new papers posted on Arxiv and recent developments in astrophysics. We have hybrid in person/virtual meetings that are welcome to anybody that would like to join. <br>
-     In my free time, I like to play racquetball, ride my bike, snowboard, and play all sorts of games, from board games, to videogames, to cardgames. 
+     In my free time, I like to play racquetball, ride my bike, longboard, snowboard, and play all sorts of games, from board games, to videogames, to card games. 
 								
-
     </p>
     
   </div>
   <p class="aligncenter">
-    <img src="sn1006c.jpg" style="width:90%;max-width:1000px;margin-top:32px;" class="center">
+    <img src="sn1006c.jpg" style="width:90%;max-width:600px;margin-top:32px;" class="center">
   </p>
   </div>
 </div>
