fixing sn1006 text

--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@ body, html {
   </div>
   <p class="aligncenter">
     <img src="sn1006c.jpg" style="width:90%;max-width:600px;margin-top:32px;" class="center">
+    This is the SN 1006 supernova remnant - a confirmed Type Ia remnant that lies only about 2 Kiloparsecs away. It's where I've done my first systematic search for a surviving Type Ia companion that you can read more about below!
   </p>
   </div>
 </div>
-<p>This is the SN 1006 supernova remnant - a confirmed Type Ia remnant that lies only about 2 Kiloparsecs away. It's where I've done my first systematic search for a surviving Type Ia companion that you can read more about below!</p> 
+<p></p> 
 <!-- Menu Container -->
 <div class="w3-container" id="publications">
   <div class="w3-content" style="max-width:700px">
