sn1006 text still

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ body, html {
     <img src="sn1006c.jpg" style="width:90%;max-width:600px;margin-top:32px;" class="center">
   </p>
   <p class="aligncenter">
-    This is the SN 1006 supernova remnant - a confirmed Type Ia remnant that lies only about 2 Kiloparsecs away. It's where I've done my first systematic search for a surviving Type Ia companion that you can read more about below!
+    This is the SN 1006 supernova remnant - a confirmed Type Ia remnant that lies only about 2 Kiloparsecs away. <br>
+    It's where I've done my first systematic search for a surviving Type Ia companion that you can read more about below!
     </p>
   </div>
 </div>
