small typing changes

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ body, html {
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
     <p>I am currently a fourth year graduate student at <a href="https://www.msu.edu">Michigan State University</a> in the department of <a href="https://www.pa.msu.edu">Physics and Astronomy.</a> </p>
 
-    <p>I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to learn about their progenitor systems and test different progenitor theories. I do so using statistical methods capitalizing on the revolutionary new GAIA mission to investigate the stellar populations in supernova remnants.<br>
+    <p>I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a> searching for surviving companions to type Ia supernova systems to learn about their progenitor systems and test different progenitor theories. I use statistical methods capitalizing on the revolutionary new GAIA mission to investigate the stellar populations in supernova remnants.<br>
 
       I also help run Michigan State's astrophysics journal club, <a href="https://jvshields.github.io/coffeepapers/">Astro Coffee!</a> We meet twice a week to discuss new papers posted on Arxiv and recent developments in astrophysics. We have hybrid in person/virtual meetings that are welcome to anybody that would like to join. <br>
-     In my free time, I like to play racquetball, ride my bike, longboard, snowboard, and play all sorts of games, from board games, to videogames, to card games. 
+     In my free time I like to play racquetball, ride my bike, longboard, snowboard, and play all sorts of games, from board games, to videogames, to card games. 
 								
     </p>
     
