push bkimg down

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         background-size: cover;
         background-image: url("me.jpg");
         min-height: 75%;
+        margin-top: 100px;
     }
 
     .menu {
