--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <span class="w3-text-white" style="font-size:90px">Joshua V. <br>Shields</span>
         </div>
         <div class="w3-display-bottomright w3-center w3-padding-large">
-            <span class="w3-tag">Astrophysics Graduate Student<br>shield90 [at] msu [dot] edu</span>
+            <span class="w3-tag">Astrophysics Graduate Student<br>shield90 [at] msu [dot] edu
+                <br><a href="https://github.com/jvshields">My github</a> </vr></span>
         </div>
     </header>
 
@@ -70,12 +71,12 @@
         <div class="w3-container" id="about">
             <div class="w3-content" style="max-width:700px">
                 <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
-                <p>I am currently a fifth year graduate student at <a href="https://www.msu.edu">Michigan State
+                <p>I am a postdoc researcher at <a href="https://www.msu.edu">Michigan State
                         University</a> in the department of <a href="https://www.pa.msu.edu">Physics and Astronomy.</a>
                 </p>
 
                 <p>I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a> and the
-                    <a href="https://kerzendorf-group.github.io/">Kerzendorf Group</a> modeling stars and searching for
+                    <a href="https://kerzendorf-lab.github.io/">Kerzendorf Group</a> modeling stars and searching for
                     surviving companions of type Ia supernovae to learn about their progenitor systems and test
                     different progenitor theories. I use statistical methods capitalizing on the revolutionary new GAIA
                     mission as well as archival Hubble data to investigate the stellar populations in supernova
@@ -83,15 +84,16 @@
                     atmospheres to simulate escaping stellar light and then fitting those models to observations to
                     learn about the structure and composition of stars. <br>
 
-                    I work on and help maintain the open-source <a href="https://github.com/tardis-sn/stardis">Stardis
+                    I am the primarily developer on the open-source <a
+                        href="https://github.com/tardis-sn/stardis">STARDIS
                         code</a>, which solves the radiative transfer equation in the outer layers of a star to simulate
                     light passing through it.
                     <br>
 
-                    I also help run Michigan State's astrophysics journal club, <a
+                    I also founded and continue to help run Michigan State's astrophysics journal club, <a
                         href="https://jvshields.github.io/coffeepapers/">Astro Coffee!</a> We meet twice a week to
                     discuss new papers posted on Arxiv and recent developments in astrophysics. We have hybrid in
-                    person/virtual meetings that are welcome to anybody that would like to join. <br>
+                    person/virtual meetings that are open to anybody that would like to join. <br>
                     In my free time I like to play racquetball, ride my bike, longboard, snowboard. I also love all
                     sorts of games, from board games, to videogames, to card games.
 
