--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Joshua V. Shields</title>
+<title>About Me - Joshua V. Shields</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -10,18 +10,6 @@
     html {
         height: 100%;
         font-family: "Inconsolata", sans-serif;
-    }
-
-    .bgimg {
-        background-position: center;
-        background-size: cover;
-        background-image: url("me.jpg");
-        min-height: 75%;
-        margin-top: 50;
-    }
-
-    .menu {
-        display: none;
     }
 
     .aligncenter {
@@ -48,29 +36,17 @@
         </div>
     </div>
 
-    <!-- Header with image -->
-    <header class="bgimg w3-display-container w3-grayscale-min" id="home">
-        <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-            <span class="w3-tag">Biomedical and Physical Sciences <br> 567 Wilson Rd., Room 3246 <br> East Lansing,
-                48823 MI</span>
-        </div>
-        <div class="w3-display-right w3-center">
-            <span class="w3-text-white" style="font-size:90px">Joshua V. <br>Shields</span>
-        </div>
-        <div class="w3-display-bottomright w3-center w3-padding-large">
-            <span class="w3-tag">Astrophysics Graduate Student<br>shield90 [at] msu [dot] edu
-                <br><a href="https://github.com/jvshields">My github</a> </vr></span>
-        </div>
-    </header>
-
+    <!-- About Container -->
     <div class="w3-container" id="about">
         <div class="w3-content" style="max-width:700px">
-            <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Welcome to my website!</span></h5>
+            <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
+            <p>I am a postdoc researcher at <a href="https://www.msu.edu">Michigan State
+                    University</a> in the department of <a href="https://www.pa.msu.edu">Physics and Astronomy.</a>
+            </p>
             <p>I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a> and the
                 <a href="https://kerzendorf-lab.github.io/">Kerzendorf Group</a> modeling stars and searching for
                 surviving companions of type Ia supernovae to learn about their progenitor systems and test
-                different progenitor theories. I am a specialist in radiative transfer, and
-                I use statistical methods capitalizing on the revolutionary new GAIA
+                different progenitor theories. I use statistical methods capitalizing on the revolutionary new GAIA
                 mission as well as archival Hubble data to investigate the stellar populations in supernova
                 remnants. I work at the intersection of observation and theory, making detailed models of stellar
                 atmospheres to simulate escaping stellar light and then fitting those models to observations to
@@ -78,8 +54,24 @@
                 I am the primarily developer on the open-source <a href="https://github.com/tardis-sn/stardis">STARDIS
                     code</a>, which solves the radiative transfer equation in the outer layers of a star to simulate
                 light passing through it.
+                <br>
+                I also founded and continue to help run Michigan State's astrophysics journal club, <a
+                    href="https://jvshields.github.io/coffeepapers/">Astro Coffee!</a> We meet twice a week to
+                discuss new papers posted on Arxiv and recent developments in astrophysics. We have hybrid in
+                person/virtual meetings that are open to anybody that would like to join. <br>
+                In my free time I like to play racquetball, ride my bike, longboard, snowboard. I also love all
+                sorts of games, from board games, to videogames, to card games.
             </p>
         </div>
+        <p class="aligncenter">
+            <img src="sn1006c.jpg" style="width:90%;max-width:600px;margin-top:32px;" class="center">
+        </p>
+        <p class="aligncenter">
+            This is the SN 1006 supernova remnant - a Type Ia remnant that lies only about 2 Kiloparsecs
+            away. <br>
+            It's where I've done my first systematic search for a surviving Type Ia companion that you can read more
+            about below!
+        </p>
     </div>
 
     <!-- Footer -->
