--- a/index.html
+++ b/index.html
@@ -59,23 +59,24 @@
         </div>
         <div class="w3-display-bottomright w3-center w3-padding-large">
             <span class="w3-tag">Astrophysics Graduate Student<br>shield90 [at] msu [dot] edu
-                <br><a href="https://github.com/jvshields">My github</a> </vr></span>
+                <br><a href="https://github.com/jvshields">https://github.com/jvshields</a> </vr></span>
         </div>
     </header>
 
     <div class="w3-container" id="about">
         <div class="w3-content" style="max-width:700px">
-            <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Welcome to my website!</span></h5>
-            <p>I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a> and the
-                <a href="https://kerzendorf-lab.github.io/">Kerzendorf Group</a> modeling stars and searching for
-                surviving companions of type Ia supernovae to learn about their progenitor systems and test
+            <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Welcome to my website! <br> Stay awhile,
+                    and listen!</span></h5>
+            <p>I'm Josh and I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a>
+                and the <a href="https://kerzendorf-lab.github.io/">Kerzendorf Group</a> modeling stars and searching
+                for surviving companions of type Ia supernovae to learn about their progenitor systems and test
                 different progenitor theories. I am a specialist in radiative transfer, and
                 I use statistical methods capitalizing on the revolutionary new GAIA
                 mission as well as archival Hubble data to investigate the stellar populations in supernova
                 remnants. I work at the intersection of observation and theory, making detailed models of stellar
                 atmospheres to simulate escaping stellar light and then fitting those models to observations to
                 learn about the structure and composition of stars. <br>
-                I am the primarily developer on the open-source <a href="https://github.com/tardis-sn/stardis">STARDIS
+                I am the primary developer on the open-source <a href="https://github.com/tardis-sn/stardis">STARDIS
                     code</a>, which solves the radiative transfer equation in the outer layers of a star to simulate
                 light passing through it.
             </p>
