--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
     <!-- Contact/Area Container -->
     <div class="w3-container" id="research" style="padding-bottom:32px;">
         <div class="w3-content" style="max-width:700px">
-            <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h5>
+            <h2 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h2>
             <p>I've also done work analyzing data from the <a
                     href="https://www.eso.org/sci/facilities/develop/instruments/muse.html">MUSE IFU</a> instrument
                 on the Very Large Telescope on four confirmed Type Ia remnants in the Large Magellanic Cloud. The
@@ -50,7 +50,7 @@
                 multi-year baseline astrometry to recover the proper motions of faint stars, in order to test one of
                 the most promising recent Type Ia progenitor scenarios. Read that paper <a
                     href="https://ui.adsabs.harvard.edu/abs/2022ApJ...933L..31S/abstract">here!</a> <br> In the past
-                I have worked on the <a href="https://www.astronomy.ohio-state.edu/asassn/">ASAS-SN</a> team to
+                I have worked with the <a href="https://www.astronomy.ohio-state.edu/asassn/">ASAS-SN</a> team to
                 discover new supernovae in low redshift galaxies.
             </p>
         </div>
