--- a/publications.html
+++ b/publications.html
@@ -35,10 +35,13 @@
     <!-- Menu Container -->
     <div class="w3-container" id="publications">
         <div class="w3-content" style="max-width:700px">
-            <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">CV AND PUBLICATIONS</span></h5>
+            <h2 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">CV AND PUBLICATIONS</span></h2>
             <div class="w3-row w3-center w3-card w3-padding">
-                <p><a href="CV.pdf">My CV</a> <br> <a href="https://orcid.org/0000-0002-1560-5286">Click here for a link
-                        to my ORCID!</a> <br></p>
+                <p>
+                <h4><a href="CV.pdf">Click here for a link to my CV</a> <br> <a
+                        href="https://orcid.org/0000-0002-1560-5286">Click here for a link
+                        to my ORCID!</a> </h4><br>
+                </p>
                 <img src="kepler.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
             </div>
         </div>
