--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <div class="w3-container" id="about">
         <div class="w3-content" style="max-width:700px">
             <h2 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h2>
-            <p>I am a postdoc researcher at <a href="https://www.msu.edu">Michigan State
+            <p>I am a postdoctoral researcher at <a href="https://www.msu.edu">Michigan State
                     University</a> in the department of <a href="https://www.pa.msu.edu">Physics and Astronomy.</a>
             </p>
             <p>I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a> and the
@@ -55,23 +55,27 @@
                     code</a>, which solves the radiative transfer equation in the outer layers of a star to simulate
                 light passing through it.
                 <br>
-                I also founded and continue to help run Michigan State's astrophysics journal club, <a
-                    href="https://jvshields.github.io/coffeepapers/">Astro Coffee!</a> We meet twice a week to
-                discuss new papers posted on Arxiv and recent developments in astrophysics. We have hybrid in
-                person/virtual meetings that are open to anybody that would like to join. <br>
-                In my free time I like to play racquetball, ride my bike, longboard, snowboard. I also love all
-                sorts of games, from board games, to videogames, to card games.
+            <p class="aligncenter">
+                <img src="sn1006c.jpg" style="width:90%;max-width:600px;margin-top:32px;" class="center">
+            </p>
+            <p class="aligncenter">
+                This is the SN 1006 supernova remnant - a Type Ia remnant that lies only about 2 Kiloparsecs
+                away.
+                It's where I've done my first systematic search for a surviving Type Ia companion that you can read
+                about <a href="research.html"> here!</a>
+            </p>
+            I also founded and continue to help run Michigan State's astrophysics journal club, <a
+                href="https://jvshields.github.io/coffeepapers/">Astro Coffee!</a> We meet twice a week to
+            discuss new papers posted on Arxiv and recent developments in astrophysics. We have hybrid in
+            person/virtual meetings that are open to anybody that would like to join. <br>
+            In my free time I like to play racquetball, ride my bike, longboard, and snowboard. I also love all
+            sorts of games, from board games, to videogames, to card games.
+            </p>
+            <p class="aligncenter">
+                <img src="meplayingmagic.jpg" style="width:90%;max-width:600px;margin-top:32px;" class="center">
             </p>
         </div>
-        <p class="aligncenter">
-            <img src="sn1006c.jpg" style="width:90%;max-width:600px;margin-top:32px;" class="center">
-        </p>
-        <p class="aligncenter">
-            This is the SN 1006 supernova remnant - a Type Ia remnant that lies only about 2 Kiloparsecs
-            away. <br>
-            It's where I've done my first systematic search for a surviving Type Ia companion that you can read more
-            about below!
-        </p>
+
     </div>
 
     <!-- Footer -->
