--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         background-size: cover;
         background-image: url("me.jpg");
         min-height: 75%;
-        margin-top: 50;
+        margin-top: 30px;
     }
 
     .menu {
@@ -67,7 +67,9 @@
         <div class="w3-content" style="max-width:700px">
             <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Welcome to my website! <br> Stay awhile,
                     and listen!</span></h5>
-            <p>I'm Josh and I work with <a href="https://wkerzendorf.github.io/#main">Professor Wolfgang Kerzendorf</a>
+            <p>I'm Josh! I'm a postdoctoral researcher working with <a
+                    href="https://wkerzendorf.github.io/#main">Professor Wolfgang
+                    Kerzendorf</a>
                 and the <a href="https://kerzendorf-lab.github.io/">Kerzendorf Group</a> modeling stars and searching
                 for surviving companions of type Ia supernovae to learn about their progenitor systems and test
                 different progenitor theories. I am a specialist in radiative transfer, and
