--- a/research.html
+++ b/research.html
@@ -36,7 +36,9 @@
     <div class="w3-container" id="research" style="padding-bottom:32px;">
         <div class="w3-content" style="max-width:700px">
             <h2 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h2>
-            <p>I've also done work analyzing data from the <a
+            <p>My research consists of both theoretical and observational astronomy. I do a lot of work studying Type Ia
+                Supernovae, as well as stellar atmospheres.
+                I've done work analyzing data from the <a
                     href="https://www.eso.org/sci/facilities/develop/instruments/muse.html">MUSE IFU</a> instrument
                 on the Very Large Telescope on four confirmed Type Ia remnants in the Large Magellanic Cloud. The
                 LMC is offers a unique laboratory to search for the surviving companions of Type Ia Supernovae,
@@ -52,6 +54,9 @@
                     href="https://ui.adsabs.harvard.edu/abs/2022ApJ...933L..31S/abstract">here!</a> <br> In the past
                 I have worked with the <a href="https://www.astronomy.ohio-state.edu/asassn/">ASAS-SN</a> team to
                 discover new supernovae in low redshift galaxies.
+            </p>
+            <p class="aligncenter">
+                <img src="the_sun.jpg" style="width:100%;max-width:800px;margin-top:32px;" class="center">
             </p>
         </div>
     </div>
