--- a/about.html
+++ b/about.html
@@ -64,18 +64,21 @@
                 It's where I've done my first systematic search for a surviving Type Ia companion that you can read
                 about <a href="research.html"> here!</a>
             </p>
-            I also founded and continue to help run Michigan State's astrophysics journal club, <a
+            I founded and continue to help run Michigan State's astrophysics journal club, <a
                 href="https://jvshields.github.io/coffeepapers/">Astro Coffee!</a> We meet twice a week to
             discuss new papers posted on Arxiv and recent developments in astrophysics. We have hybrid in
             person/virtual meetings that are open to anybody that would like to join. <br>
-            In my free time I like to play racquetball, ride my bike, longboard, and snowboard. I also love all
-            sorts of games, from board games, to videogames, to card games.
-            </p>
             <p class="aligncenter">
-                <img src="meplayingmagic.jpg" style="width:90%;max-width:600px;margin-top:32px;" class="center">
+                <img src="meplayingmagic.jpg" style="width:100%;max-width:600px;margin-top:32px;" class="center">
+            </p>
+            In my free time I like to play racquetball, ride my bike, longboard, and snowboard. I love all
+            competition and all sorts of games, from board games, to videogames, to card games like magic the gathering. 
+            </p>
+            Contrary to popular belief, I've also been outside once or twice.
+            <p class="aligncenter">
+                <img src="burning_man_photo.jpg" style="width:100%;max-width:600px;margin-top:32px;" class="center">
             </p>
         </div>
-
     </div>
 
     <!-- Footer -->
