--- a/about.html
+++ b/about.html
@@ -69,14 +69,14 @@
             discuss new papers posted on Arxiv and recent developments in astrophysics. We have hybrid in
             person/virtual meetings that are open to anybody that would like to join. <br>
             <p class="aligncenter">
-                <img src="meplayingmagic.jpg" style="width:100%;max-width:600px;margin-top:32px;" class="center">
+                <img src="meplayingmagic.jpg" style="width:100%;max-width:1200px;margin-top:8px;" class="center">
             </p>
-            In my free time I like to play racquetball, ride my bike, longboard, and snowboard. I love all
+            In my free time I like to play racquetball, ride my bike, longboard, and snowboard. I love
             competition and all sorts of games, from board games, to videogames, to card games like magic the gathering. 
             </p>
             Contrary to popular belief, I've also been outside once or twice.
             <p class="aligncenter">
-                <img src="burning_man_photo.jpg" style="width:100%;max-width:600px;margin-top:32px;" class="center">
+                <img src="burning_man_photo.jpg" style="width:100%;max-width:1200px;margin-top:8px;" class="center">
             </p>
         </div>
     </div>
