rewrite some passages to update

--- a/about.html
+++ b/about.html
@@ -59,24 +59,28 @@
                 <img src="sn1006c.jpg" style="width:90%;max-width:600px;margin-top:32px;" class="center">
             </p>
             <p class="aligncenter">
-                This is the SN 1006 supernova remnant - a Type Ia remnant that lies only about 2 Kiloparsecs
-                away.
-                It's where I've done my first systematic search for a surviving Type Ia companion that you can read
-                about <a href="research.html"> here!</a>
+                <div style="width:100%; text-align: center;"> This is the SN 1006 supernova remnant - a Type Ia remnant that 
+                    lies only about 2 Kiloparsecs away. I performed a systematic search for a surviving Type Ia companion using
+                    the <a href="https://noirlab.edu/public/programs/ctio/victor-blanco-4m-telescope/decam/"> Dark Energy Camera</a> 
+                    that you can read about <a href="research.html"> here!</a></div>
+                
             </p>
-            I founded and continue to help run Michigan State's astrophysics journal club, <a
+            Outside of research, I founded and continue to help run Michigan State's astrophysics journal club, <a
                 href="https://jvshields.github.io/coffeepapers/">Astro Coffee!</a> We meet twice a week to
             discuss new papers posted on Arxiv and recent developments in astrophysics. We have hybrid in
             person/virtual meetings that are open to anybody that would like to join. <br>
             <p class="aligncenter">
                 <img src="meplayingmagic.jpg" style="width:100%;max-width:1200px;margin-top:8px;" class="center">
+                <div style="width:100%; text-align: center;"> Sometimes I travel for magic tournaments.</div>
+
             </p>
-            In my free time I like to play racquetball, ride my bike, longboard, and snowboard. I love
+            In my free time I like to play racquetball, bike, longboard, and snowboard. I also love
             competition and all sorts of games, from board games, to videogames, to card games like magic the gathering. 
             </p>
-            Contrary to popular belief, I've also been outside once or twice.
+            Contrary to popular belief I've been outside once or twice, but it hasn't always gone too well.
             <p class="aligncenter">
                 <img src="burning_man_photo.jpg" style="width:100%;max-width:1200px;margin-top:8px;" class="center">
+                <div style="width:100%; text-align: center;"> Surviving a dust storm in Nevada.</div>
             </p>
         </div>
     </div>
