--- a/research.html
+++ b/research.html
@@ -36,24 +36,23 @@
     <div class="w3-container" id="research" style="padding-bottom:32px;">
         <div class="w3-content" style="max-width:700px">
             <h2 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">RESEARCH</span></h2>
-            <p>My research consists of both theoretical and observational astronomy. I do a lot of work studying Type Ia
-                Supernovae, as well as stellar atmospheres.
-                I've done work analyzing data from the <a
-                    href="https://www.eso.org/sci/facilities/develop/instruments/muse.html">MUSE IFU</a> instrument
-                on the Very Large Telescope on four confirmed Type Ia remnants in the Large Magellanic Cloud. The
-                LMC is offers a unique laboratory to search for the surviving companions of Type Ia Supernovae,
-                because unlike our Galaxy, the entire remnants are free from obscuring foreground dust. I'm working
-                on a pipeline to systematically extract the spectra of the hundreds to thousands of stars in each
-                remnant, then compare each spectra to stellar models to get an understanding of each star. Once
-                that's done, I'll be able to look for weird, outstanding objects that could be long-sought surviving
-                companions of our Type Ias!
-                <br>
-                I recently completed a project investigating the stellar population in the SN1006 remnant, using
+            <p>My research consists of both theoretical and observational astronomy. Much of my PhD work was spent 
+                examining supernova remnants to search for the surviving companions of Type Ia Supernovae. The rest 
+                was spent developing the open-source <a href="https://github.com/tardis-sn/stardis">STARDIS code</a>, 
+                which simulates light going through 
+                stellar atmospheres to help us understand the structure and composition of stars.
+                <br> <br>
+                I've performed a systematic surviving companion search of the SNR 0509-67.5 remnant in the Large Magellanic Cloud 
+                by combining archival Hubble Space Telescope imaging to allow for Bayesian inference of astrophysical parameters 
+                of the enclosed stellar population.  
+                <br> <br>
+                I've also completed a project investigating the stellar population in the SN1006 remnant, using
                 multi-year baseline astrometry to recover the proper motions of faint stars, in order to test one of
                 the most promising recent Type Ia progenitor scenarios. Read that paper <a
-                    href="https://ui.adsabs.harvard.edu/abs/2022ApJ...933L..31S/abstract">here!</a> <br> In the past
-                I have worked with the <a href="https://www.astronomy.ohio-state.edu/asassn/">ASAS-SN</a> team to
-                discover new supernovae in low redshift galaxies.
+                href="https://ui.adsabs.harvard.edu/abs/2022ApJ...933L..31S/abstract">here!</a> 
+                <br><br>
+                Before I came to MSU, I worked with the <a href="https://www.astronomy.ohio-state.edu/asassn/">ASAS-SN</a> team to
+                discover new supernovae and other transients in low redshift galaxies.
             </p>
             <p class="aligncenter">
                 <img src="the_sun.jpg" style="width:100%;max-width:800px;margin-top:32px;" class="center">
