--- a/publications.html
+++ b/publications.html
@@ -39,8 +39,8 @@
             <div class="w3-row w3-center w3-card w3-padding">
                 <p>
                 <h4><a href="CV.pdf">Click here for a link to my CV</a> <br> <a
-                        href="https://orcid.org/0000-0002-1560-5286">Click here for a link
-                        to my ORCID!</a> </h4><br>
+                        href="https://orcid.org/0000-0002-1560-5286">And click here for a link
+                        to my ORCID</a> </h4><br>
                 </p>
                 <img src="kepler.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
             </div>
